Revision history for Perl extension RPi::WiringPi.

2.36.6 UNREL
        - updated FAQ, made section headers, fixed issue in sreg overview
        - added breadboard diagram and fritzing project for dual 74HC595 shift
          register connections

2.36.5  2017-01-22
        - added dpot(), returns a RPI::DigiPot::MCP4XXXX digital potentiometer
          object

2.36.4  2017-01-22
        - fix params in POD, they weren't displaying correctly

2.36.3  2017-01-22
        - pod fixes/updates
        - added BMP180 section to FAQ
        - added untracked files
        - removed the ability to use SYS (GPIO_SYS) mode. It was implemented to
          avoid having to be root
        - moved gpio_layout() from core to Util
        - RPi::ADC::ADS is now a prereq (v1.01)
        - added adc() (closes #12)
        - moved pwm_range() to Util, leaving only object creation methods
          in the core module
        - fixed POD in reference to shiftreg (closes #13)
        - added ADC section in FAQ
        - added docs/, with fritzing drawings and images for basic pwm/ADC
          setup
        - incorporated RPi::SPI as spi() to provide direct access to the Serial
          Peripheral Interface

2.36.2  2017-01-14
        - change versioning. The X.XX portion represents which version of
          WiringPi::API and wiringPi we're compatible with
        - cleaned up some tests due to previous changes
        - added BMP180.pm module and all functionality of the barometric
          pressure sensor per WiringPi::API
        - updated ver of WiringPi::API prereq to v2.36.1

1.02    2017-01-13
        - incorporated shift registers after adding to WiringPi::API
        - added shift_register()
        - updated documentation (POD and Tutorial)

1.01    2016-08-27
        - no functional changes
        - POD fixes, updates and clarifications (thanks 'jmlynesjr' from
          PerlMonks for assisting)

1.00    2016-08-24